force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/fboost__B_SchedulerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Boost Scheduler Configuration</description>
    <label>Boost Scheduler Config</label>
    <pluralLabel>Boost Scheduler Config</pluralLabel>
</CustomObject>