force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/fields/fboost__ClassName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ClassName__c</fullName>
    <description>Determines process class name. Class needs to implement the SchedulerJob interface.</description>
    <inlineHelpText>Determines process class name. Class needs to implement the SchedulerJob interface.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>