force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/fields/fboost__ExecutionInterval__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExecutionInterval__c</fullName>
    <defaultValue>&quot;30min&quot;</defaultValue>
    <description>Determines process execution interval.</description>
    <inlineHelpText>Determines process execution interval.</inlineHelpText>
    <label>Execution Interval</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1min</fullName>
            </value>
            <value>
                <fullName>2min</fullName>
            </value>
            <value>
                <fullName>3min</fullName>
            </value>
            <value>
                <fullName>4min</fullName>
            </value>
            <value>
                <fullName>5min</fullName>
            </value>
            <value>
                <fullName>6min</fullName>
            </value>
            <value>
                <fullName>7min</fullName>
            </value>
            <value>
                <fullName>8min</fullName>
            </value>
            <value>
                <fullName>9min</fullName>
            </value>
            <value>
                <fullName>10min</fullName>
            </value>
            <value>
                <fullName>15min</fullName>
            </value>
            <value>
                <fullName>20min</fullName>
            </value>
            <value>
                <fullName>30min</fullName>
                <default>true</default>
                <label>30min</label>
            </value>
            <value>
                <fullName>45min</fullName>
            </value>
            <value>
                <fullName>60min</fullName>
            </value>
            <value>
                <fullName>2hour</fullName>
            </value>
            <value>
                <fullName>3hour</fullName>
            </value>
            <value>
                <fullName>4hour</fullName>
            </value>
            <value>
                <fullName>6hour</fullName>
            </value>
            <value>
                <fullName>8hour</fullName>
            </value>
            <value>
                <fullName>12hour</fullName>
            </value>
            <value>
                <fullName>01:00</fullName>
            </value>
            <value>
                <fullName>02:00</fullName>
            </value>
            <value>
                <fullName>03:00</fullName>
            </value>
            <value>
                <fullName>04:00</fullName>
            </value>
            <value>
                <fullName>05:00</fullName>
            </value>
            <value>
                <fullName>06:00</fullName>
            </value>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>