force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/fields/fboost__FeatureAvailability__c.field-meta.xml
<CustomField>
    <fullName>fboost__FeatureAvailability__c</fullName>
    <description>Determines feature availability</description>
    <inlineHelpText>Determines feature availability</inlineHelpText>
    <label>Feature Availability</label>
    <referenceTo>fboost__B_Feature__mdt</referenceTo>
    <relationshipLabel>Boost Scheduler Config</relationshipLabel>
    <relationshipName>BoostSchedulerConfig</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>