force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/fields/fboost__IsActive__c.field-meta.xml
<CustomField>
    <fullName>fboost__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determine if a process is active. Inactivated processes are removed from the Scheduler Jobs queue.</description>
    <inlineHelpText>Determine if a process is active. Inactivated processes are removed from the Scheduler Jobs queue.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>