force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/fields/fboost__JobConfiguration__c.field-meta.xml
<CustomField>
    <fullName>fboost__JobConfiguration__c</fullName>
    <description>Additional scheduler job configuration. For clean-up job should contain a SOQL query that determines which records should be removed or Salesforce Object Name</description>
    <inlineHelpText>Additional scheduler job configuration. For clean-up job should contain a SOQL query that determines which records should be removed or Salesforce Object Name</inlineHelpText>
    <label>Job Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>