force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/fields/fboost__Type__c.field-meta.xml
<CustomField>
    <fullName>fboost__Type__c</fullName>
    <defaultValue>&quot;Custom&quot;</defaultValue>
    <description>Type of the scheduled job.</description>
    <inlineHelpText>Type of the scheduled job</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>AsyncJobQueueProcessor</fullName>
                <label>Async Job Queue Processor</label>
            </value>
            <value>
                <fullName>StepFunctionsGroup</fullName>
                <label>Step Functions Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>