force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/validationRules/fboost__ValidateCleanupClassName.validationRule-meta.xml
<ValidationRule>
    <fullName>fboost__ValidateCleanupClassName</fullName>
    <active>true</active>
    <description>Checks if Class Name is Required</description>
    <errorConditionFormula>(
				ISPICKVAL(fboost__Type__c, &apos;Cleanup&apos;)
) 
&amp;&amp; NOT(ISBLANK(fboost__ClassName__c))</errorConditionFormula>
    <errorDisplayField>fboost__ClassName__c</errorDisplayField>
    <errorMessage>Class Name for Cleanup job is not supported</errorMessage>
</ValidationRule>