force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/validationRules/fboost__ValidateJobConfigForCleanUpJob.validationRule-meta.xml
<ValidationRule>
    <fullName>fboost__ValidateJobConfigForCleanUpJob</fullName>
    <active>true</active>
    <description>Checks if Job Configuration contains SOQL query</description>
    <errorConditionFormula>(
    ISPICKVAL(fboost__Type__c, &apos;Cleanup&apos;) ||
    ISPICKVAL(fboost__Type__c, &apos;Step Functions Group&apos;)
)
				&amp;&amp; 
(
				ISBLANK(fboost__JobConfiguration__c) ||
				NOT(CONTAINS(fboost__JobConfiguration__c, &apos;SELECT &apos;)) ||
				NOT(CONTAINS(fboost__JobConfiguration__c, &apos; FROM &apos;)) ||
				CONTAINS(fboost__JobConfiguration__c, &apos;LIMIT &apos;) ||
				CONTAINS(fboost__JobConfiguration__c, &apos;OFFSET &apos;) ||
				CONTAINS(fboost__JobConfiguration__c, &apos;GROUP BY &apos;)
)</errorConditionFormula>
    <errorDisplayField>fboost__JobConfiguration__c</errorDisplayField>
    <errorMessage>Job Configuration needs to contain SOQL query with SELECT and FROM clause but without LIMIT, OFFSET and GROUP BY statements</errorMessage>
</ValidationRule>