force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/validationRules/fboost__ValidateStepFunctionClassName.validationRule-meta.xml
<ValidationRule>
    <fullName>fboost__ValidateStepFunctionClassName</fullName>
    <active>true</active>
    <description>Checks if Class Name is Required</description>
    <errorConditionFormula>(
				ISPICKVAL(fboost__Type__c, &apos;Step Function Queue Processor&apos;)
) 
&amp;&amp; ISBLANK(fboost__ClassName__c)</errorConditionFormula>
    <errorDisplayField>fboost__ClassName__c</errorDisplayField>
    <errorMessage>Class Name field needs to contain the Step Function class name. This job will only work for the async Step  Functions which are queued in the Boost Async Job queue.</errorMessage>
</ValidationRule>