force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>MasterLabel</columns>
    <columns>fboost__Type__c</columns>
    <columns>fboost__ExecutionInterval__c</columns>
    <columns>fboost__ClassName__c</columns>
    <columns>fboost__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Active</label>
    <language>en_US</language>
</ListView>