force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/listViews/fboost__AllActive.listView-meta.xml
<ListView>
    <fullName>fboost__AllActive</fullName>
    <columns>MasterLabel</columns>
    <columns>fboost__Type__c</columns>
    <columns>fboost__ExecutionInterval__c</columns>
    <columns>fboost__ClassName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fboost__IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
    <language>en_US</language>
</ListView>