force-app/main/default/objects/fboost__B_SchedulerConfig__mdt/listViews/fboost__AllInactive.listView-meta.xml
<ListView>
    <fullName>fboost__AllInactive</fullName>
    <columns>MasterLabel</columns>
    <columns>fboost__Type__c</columns>
    <columns>fboost__ExecutionInterval__c</columns>
    <columns>fboost__ClassName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fboost__IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive</label>
    <language>en_US</language>
</ListView>